python/executable/build/bdist.macosx-10.8-x86_64/python2.7-standalone/app/collect/pysdif/pysdif.pxd

    
    # 
    # typedef struct SdifMatrixDataS SdifMatrixDataT;
    # struct SdifMatrixDataS
    # {
    #   SdifMatrixHeaderT *Header;
    #   int               ForeignHeader;  /* Header was not allocated by me */
    #   SdifUInt4         Size;       /* byte size of matrix on file */
    #   DataTypeUT        Data;       /* any type pointer to data */
    #   SdifUInt4         AllocSize;  /* allocated size of data in bytes */
    # };
    # 
    struct SdifMatrixDataS:
        SdifMatrixHeaderT *Header
        int               ForeignHeader
        SdifUInt4         Size
        DataTypeUT        Data
        SdifUInt4         AllocSize
    ctypedef SdifMatrixDataS SdifMatrixDataT

    # /* SdifFrame.h */
    # typedef struct SdifFrameHeaderS SdifFrameHeaderT;
    # struct SdifFrameHeaderS
    # {
    #   SdifSignature Signature;
    #   SdifUInt4  Size;
    #   SdifUInt4  NbMatrix;
    #   SdifUInt4  NumID;
    #   SdifFloat8 Time;
    # } ;
    struct SdifFrameHeaderS:
        SdifSignature Signature
        SdifUInt4  Size
        SdifUInt4  NbMatrix
        SdifUInt4  NumID
        SdifFloat8 Time
    ctypedef SdifFrameHeaderS SdifFrameHeaderT
        
    # 
    # 
    # typedef struct SdifFrameDataS SdifFrameDataT;
    # struct SdifFrameDataS
    # {
    #   SdifFrameHeaderT *Header;
    #   SdifMatrixDataT* *Matrix_s;
    # } ;
    struct SdifFrameDataS:
        SdifFrameHeaderT *Header
        SdifMatrixDataT* *Matrix_s  # array of matrices
    ctypedef SdifFrameDataS SdifFrameDataT
    
    # 
    # 
    # 
    # /* SdifTimePosition.h */
    # typedef struct SdifTimePositionS SdifTimePositionT;
    # 
    # struct SdifTimePositionS
    # {
    #   SdifFloat8    Time;
    #   SdiffPosT     Position;
    # };
    struct SdifTimePositionS:
        SdifFloat8    Time
        SdiffPosT     Position
    ctypedef SdifTimePositionS SdifTimePositionT

    # 
    # 
    # typedef struct SdifTimePositionLS SdifTimePositionLT;
    # 
    # struct SdifTimePositionLS
    # {
    #     SdifListT*          TimePosList;
    # };
    struct SdifTimePositionLS:
        SdifListT*  TimePosList
    ctypedef SdifTimePositionLS SdifTimePositionLT
    
    SdifTimePositionT* SdifCreateTimePosition(SdifFloat8 Time, SdiffPosT Position)
    void               SdifKillTimePosition(void* TimePosition)
    SdifTimePositionLT* SdifCreateTimePositionL()
    SdifTimePositionLT* SdifCreateTimePositionL()
    void                SdifKillTimePositionL  (SdifTimePositionLT *TimePositionL)

    SdifTimePositionLT* SdifTimePositionLPutTail(SdifTimePositionLT* TimePositionL, SdifFloat8 Time, SdiffPosT Position)
    SdifTimePositionT*  SdifTimePositionLGetTail(SdifTimePositionLT* TimePositionL)
    # 
    # 
    # 
    # /* SdifSignatureTab.h */
    struct SdifSignatureTabS:
        SdifUInt4 NbSignMax
        SdifUInt4 NbSign
        SdifSignature* Tab
    ctypedef SdifSignatureTabS SdifSignatureTabT
    # 
    # /* SdifSelect.h */
    # 
    # /* 
    # // DATA GROUP:  SDIF Selection
    # */
    # 
    # /* tokens (numerical ids) for sdifspec separators */
    # typedef enum { sst_specsep, sst_stream, sst_frame, sst_matrix, sst_column, 
    #                sst_row,     sst_time,   sst_list,  sst_range,  sst_delta,
    #                sst_num  /* number of tokens */,    sst_norange = 0
    # } SdifSelectTokens;
    enum SdifSelectTokensE:
        sst_specsep, sst_stream, sst_frame, sst_matrix, sst_column, 
        sst_row,     sst_time,   sst_list,  sst_range,  sst_delta,
        sst_num
    ctypedef SdifSelectTokensE SdifSelectTokens
    # 
    # /*DOC: 
    #   Selection element interface (returned by SdifGetNextSelection*):
    #   One basic data element value, with optional range.  
    #   The meaning of range is determined by rangetype: 
    # 
    #   [] 0          no range
    #   [] sst_range  range is value..range
    #   [] sst_delta  range is value-range..value+range
    # */
    # 
    # typedef struct 
    # {
    #     SdifUInt4          value, range;
    #     SdifSelectTokens   rangetype; /* 0 for not present, sst_range, sst_delta */
    # } SdifSelectElementIntT; 
    ctypedef struct SdifSelectElementIntT:
        SdifUInt4          value, range
        SdifSelectTokens   rangetype # ; /* 0 for not present, sst_range, sst_delta */
    
    # typedef struct 
    # {
    #     double             value, range;
    #     SdifSelectTokens   rangetype; /* 0 for not present, sst_range, sst_delta */
    # } SdifSelectElementRealT;
    # 
    ctypedef struct SdifSelectElementRealT:
        double value, range
        SdifSelectTokens rangetype
        


    # /* no SdifSelectElementSignatureT or string range, since it makes no sense */
    # 
    # 
    # 
    # /*DOC:
    #   Internal: one value of different possible types in a selection
    #   element (the element list determines which type is actually used).  
    # */
    # typedef union SdifSelectValueS 
    # {
    #     SdifUInt4      integer;
    #     double         real;
    #     char           *string;
    #     SdifSignature  signature;
    # } SdifSelectValueT;
    union SdifSelectValueS:
        SdifUInt4      integer
        double         real
        char           *string
        SdifSignature  signature
    ctypedef SdifSelectValueS SdifSelectValueT
    # 
    # /*DOC: 
    #   Selection element internal data structure:
    #   One basic data element, with optional <ul>
    #   <li> range (value is lower, range is upper bound) or 
    #   <li> delta (value-range is lower, value+range is upper bound)
    #   </ul>
    # */
    # typedef struct SdifSelectElementS
    # {
    #     SdifSelectValueT value;
    #     SdifSelectValueT range;
    #     SdifSelectTokens rangetype; /* 0 for not present, sst_range, sst_delta */
    # } SdifSelectElementT, *SdifSelectElementP;
    struct SdifSelectElementS:
        SdifSelectValueT value
        SdifSelectValueT range
        SdifSelectTokens rangetype # /* 0 for not present, sst_range, sst_delta */
    ctypedef SdifSelectElementS SdifSelectElementT
    ctypedef SdifSelectElementS* SdifSelectElementP
        
        # typedef struct SdifSelectIntMaskS
    # {
    #     SdifUInt4   num;            /* number of ints selected */
    #     SdifUInt4   max;            /* max given int, #elems in mask */
    #     int        *mask;           /* selection bit mask */
    #     int         openend;        /* are elems > max included? */
    # } SdifSelectIntMaskT, *SdifSelectIntMaskP;
    struct difSelectIntMaskS:
        SdifUInt4   num       #     /* number of ints selected */
        SdifUInt4   max       #     /* max given int, #elems in mask */
        int        *mask      #     /* selection bit mask */
        int         openend   #     /* are elems > max included? */
    ctypedef difSelectIntMaskS SdifSelectIntMaskT
    ctypedef difSelectIntMaskS* SdifSelectIntMaskP
        
    # /*DOC: 
    #   Holds a selection of what data to access in an SDIF file,
    #   parsed from a simple regular expression.  
    # */
    # typedef struct
    # {
    #     char        *filename,      /* allocated / freed by 
    #                                    SdifInitSelection / SdifFreeSelection */
    #                 *basename;      /* points into filename */
    #     SdifListP   stream, frame, matrix, column, row, time;
    # 
    #     SdifSelectIntMaskT streammask;
    #     SdifSelectIntMaskT rowmask;
    #     SdifSelectIntMaskT colmask;
    # } SdifSelectionT;
    ctypedef struct SdifSelectionT:
        char *filename #     /* allocated / freed by 
        #                                    SdifInitSelection / SdifFreeSelection */
        char *basename #    /* points into filename */
        SdifListP   stream, frame, matrix, column, row, time
        # 
        SdifSelectIntMaskT streammask
        SdifSelectIntMaskT rowmask
        SdifSelectIntMaskT colmask
    # 
    # /* TODO: array of select elements
    #      struct { 
    #         SdifListP list; 
    #         SdifSelectElementT minmax; 
    #         SdifSelectIntMaskP mask;
    #      } elem [eSelNum];
    #      indexed by
    #      enum   { eTime, eStream, eFrame, eMatrix, eColumn, eRow, eSelNum }
    #    to use in all API functions instead of SdifListP.
    # */
    # 
    # 
    # 
    # /* SdifErrMess.h */
    cdef enum SdifErrorTagE:
        eFalse   = 0,
        eUnknown = 0,
        eTrue    = 1,
        eNoError = 1,
        eTypeDataNotSupported,
        eNameLength,
        eEof,       #/* 4 */
        eReDefined,
        eUnDefined,
        eSyntax,
        eBadTypesFile,
        eBadType,
        eBadHeader,
        eRecursiveDetect,
        eUnInterpreted,
        eOnlyOneChunkOf,
        eUserDefInFileYet,
        eBadMode,
        eBadStdFile,
        eReadWriteOnSameFile,
        eBadFormatVersion,
        eMtrxUsedYet,
        eMtrxNotInFrame,
        # /* from here on global errors that don't always have an SdifFileT attached */
        eGlobalError,
        eFreeNull = eGlobalError,
        eAllocFail,
        eArrayPosition,
        eFileNotFound,
        eInvalidPreType,
        eAffectationOrder,
        eNoModifErr,
        eNotInDataTypeUnion,
        eNotFound,
        eExistYet,
        eWordCut,
        eTokenLength
    ctypedef SdifErrorTagE SdifErrorTagET
    # 
    # 
    # /*DOC:
    #   Level of Error */
    # typedef enum SdifErrorLevelE
    # {
    #         eFatal,
    #         eError,
    #         eWarning,
    #         eRemark,
    #         eNoLevel,
    #         eNumLevels      /* level count, must always be last */
    # } SdifErrorLevelET;
    cdef enum SdifErrorLevelE:
        eFatal,
        eError,
        eWarning,
        eRemark,
        eNoLevel,   
        eNumLevels     # /* level count, must always be last */
    ctypedef SdifErrorLevelE SdifErrorLevelET
    
    # } SdifErrorLevelET;


    # 
    # 
    # typedef struct SdifErrorS SdifErrorT;
    # struct SdifErrorS
    # {
    #         SdifErrorTagET          Tag;
    #         SdifErrorLevelET        Level;
    #         char*                   UserMess;
    # };
    struct SdifErrorS:
        SdifErrorTagET Tag
        SdifErrorLevelET Level
        char* UserMess
    ctypedef SdifErrorS SdifErrorT
    #

    # 
    # typedef struct SdifErrorLS SdifErrorLT;
    # struct SdifErrorLS
    # {
    #   SdifListT*    ErrorList;
    #   SdifFileT*    SdifF; /* only a link */
    # };
    struct SdifErrorLS:
        SdifListT*    ErrorList
        SdifFileT*    SdifF  #/* only a link */
    ctypedef SdifErrorLS SdifErrorLT
